--- a/nebula.cabal
+++ b/nebula.cabal
@@ -7,7 +7,11 @@ License-file:        LICENSE
 Author:              Kyle Isom
 Maintainer:          Kyle Isom <kyle@tyrfingr.is>
 Build-Type:          Simple
-Build-Depends:       base, bytestring, cryptohash, base16-bytestring
+Build-Depends:       base
+		     ,bytestring
+		     ,cryptohash
+		     ,base16-bytestring
+		     ,directory
 
 Executable:          nebula
 Main-is:             Nebula.lhs
